# haskell-perf

./: .packcheck.ignore  README.md  flake.nix  haskell-perf.cabal
.github/workflows/: haskell.yml
dev/: GhcFlags.md  LiveStatWindows.md  Methods.md  ghc-work.md
docs/: TraceEventIO.md  enabling-perf-counters.md  eventlog-performance-analysis.md  ghc-rts-performance-analysis.md  haskell-perf-measurement.md  performance-analysis-methods.md  thread-cputime-primop.md  threadCPUTime.hs
examples/: README.md  console-loop-multi-thread.hs  console-loop.hs  ffi.hs  getRTSStats.hs  traceEventIO.hs  withStats.hs
hperf/: Main.hs
lib/: Stat.hs
lib/Eventlog/: Aggregator.hs  EventParser.hs
lib/Perf/: Measure.hs
lib/Perf/Eventlog/: Aggregate.hs  Parser.hs
lib/Perf/Internal/: Sink.hs
lib/Perf/Internal/Measure/: Bracket.hs  RUsage.hsc  Types.hs
lib/Perf/Metric/: KeyValue.hs  Type.hs
lib/Perf/Sink/: Console.hs
lib/Perf/Sink/Console/: Unbounded.hs
lib/Streamly/Metrics/: Channel.hs  Perf.hs
lib/Streamly/Metrics/Channel/: Common.hs  Unbounded.hs
lib/Streamly/Metrics/Perf/: RUsage.hsc  Type.hs
src/: Aggregator.hs  EventParser.hs  Main.hs
stat-collector-src/: Main.hs
test/: Main.hs
test/snippets/: delay-loop.hs  traceEventIOWarp.hs
