cabal-version:      2.2
name:               haskell-perf
version:            0.1.0
synopsis:           Haskell performance analysis Tool
description:
  Analyze the CPU cost, heap allocations, Linux perf event counters for
  Haskell threads and for user defined code windows in a Haskell thread
  aware manner.

homepage:            https://streamly.composewell.com
bug-reports:         https://github.com/composewell/haskell-perf/issues
license:             Apache-2.0
license-file:        LICENSE
tested-with:         GHC==9.0.1
                   , GHC==9.2.7
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2021 Composewell Technologies
category:            Streamly
stability:           Experimental
build-type:          Simple

extra-doc-files:
    Changelog.md
    README.md
    dev/GhcFlags.md
    dev/Methods.md
    dev/metrics.md
    dev/ghc-work.md
    docs/*.md
    examples/README.md

extra-source-files:
    examples/*.hs
    test/snippets/*.hs

source-repository head
    type: git
    location: https://github.com/composewell/haskell-perf

flag dev
  description: Development build
  manual: True
  default: False

-- flag fusion-plugin
--   description: Use fusion plugin for benchmarks and executables
--   manual: True
--   default: False

-------------------------------------------------------------------------------
-- Common stanzas
-------------------------------------------------------------------------------

common default-extensions
    -- In GHC 2024
    default-extensions:
        BangPatterns
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        RankNTypes
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeOperators

    -- Not in GHC2024
    default-extensions:
        CPP
        CApiFFI
        MagicHash
        PatternSynonyms
        RecordWildCards

common compile-options
    import: default-extensions
    default-language: Haskell2010

    ghc-options:    -Weverything
                    -Wno-implicit-prelude
                    -Wno-missing-deriving-strategies
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-missing-role-annotations
                    -Wno-missing-safe-haskell-mode
                    -Wno-missed-specialisations
                    -Wno-all-missed-specialisations
                    -Wno-monomorphism-restriction
                    -Wno-prepositive-qualified-module
                    -Wno-unsafe
                    -Rghc-timing
                    -Wno-missing-kind-signatures
                    -Wno-redundant-bang-patterns
                    -Wno-operator-whitespace
                    -Wno-incomplete-uni-patterns

    if flag(dev)
      ghc-options:  -Wmissed-specialisations
                    -Wall-missed-specialisations
                    -fno-ignore-asserts

common optimization-options
    ghc-options: -O2
                 -fdicts-strict
                 -fspec-constr-recursive=16
                 -fmax-worker-args=16

common lib-options
  import: compile-options, optimization-options

common test-options
  import: compile-options, optimization-options
  ghc-options: -with-rtsopts -T

-------------------------------------------------------------------------------
-- Library
-------------------------------------------------------------------------------

library
    import: lib-options

    hs-source-dirs: lib
    exposed-modules:
       Perf.Metric.KeyValue
     , Perf.Metric.Type
     , Perf.Measure
     , Perf.Internal.Measure.Types
     , Perf.Internal.Measure.Bracket
     , Perf.Sink.Console
     , Perf.Sink.Console.Unbounded
     , Perf.Internal.Sink
     , Perf.Eventlog.Parser
     , Perf.Eventlog.Aggregate

    if !os(windows)
      exposed-modules:
        Perf.Internal.Measure.RUsage

    build-depends:
       base >= 4.9 && < 5
     , containers < 0.9
     , pretty-show >= 1.10 && < 1.11
     , stm >= 2.5.3 && < 2.6
     , streamly >= 0.11.0 && < 0.12
     , streamly-core >= 0.3.0 && < 0.4

-------------------------------------------------------------------------------
-- Executables
-------------------------------------------------------------------------------

executable hperf
  import: compile-options, optimization-options
  hs-source-dirs: hperf
  main-is: Main.hs
  build-depends:
       base >= 4.9 && < 5
     , containers < 0.9
     , format-numbers < 0.2
     , haskell-perf
     , optparse-applicative < 0.20
     , streamly-core >= 0.3.0 && < 0.4
     , streamly-statistics < 0.3
     , text < 2.2

-------------------------------------------------------------------------------
-- Examples
-------------------------------------------------------------------------------

-- XXX Use examples flag to compile these

executable getRTSStats
  import: test-options
  hs-source-dirs: examples
  main-is: getRTSStats.hs
  ghc-options: -O2 -fmax-worker-args=16 -fspec-constr-recursive=16
  build-depends:
       base
     , haskell-perf
     , streamly-core

executable traceEventIO
  import: compile-options
  hs-source-dirs: examples
  ghc-options: -threaded -rtsopts "-with-rtsopts=-l"
  main-is: traceEventIO.hs
  build-depends:
       base >= 4.9 && < 5
     , unix < 2.9
  if os(windows)
    buildable: False

-------------------------------------------------------------------------------
-- Tests
-------------------------------------------------------------------------------

